CLDIDE fix broken input field in IE

--- a/app/site/styles/style.css
+++ b/app/site/styles/style.css
@@ -138,6 +138,7 @@ body,h1,h2,h3,h4,h5,h6,a{
 }
 .signup-page input[type="text"],.signup-page input[type="email"],.signup-page input[type="password"]{
 	width:220px;
+	height:42px;
 	border-radius:5px;
 	border:none;
 	background:#2F6286;
